--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,7 +6,7 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
 #2.数据库连接参数
-#2.1jdbc驱动，示数据库厂商决定，这是mysql的驱动
+#2.1jdbc驱动，是数据库厂商决定，这是mysql的驱动
 #jdbc.driver=com.mysql.cj.jdbc.Driver
 #2.2数据库连接url，包括ip(127.0.0.1)、端口(3306)、数据库名(test)
 #jdbc.url=jdbc:mysql://192.168.79.253:3306/jia_dev?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
