--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -1,7 +1,9 @@
 #1.项目启动的端口
 server.port=82
+#正式环境用
 server.servlet.context-path=/
-
+#本地测试用
+#server.servlet.context-path=/mgr
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
