房屋查询改为直接查询思源数据库，涉及房屋列表 ，房屋选择下拉显示，扫码入住消息修改

--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -40,7 +40,15 @@ entity_package=com.ej.hgj.entity
 spring.main.allow-circular-references=true
 
 #分页插件
-pagehelper.helper-dialect=mysql
+#pagehelper.helper-dialect=mysql
+#pagehelper.params=count=countSql
+#pagehelper.reasonable=true
+#pagehelper.support-methods-arguments=true
+
+#分页插件
+#pagehelper.helper-dialect=mysql
+#自动识别数据库方言
+pagehelper.autoRuntimeDialect=true
 pagehelper.params=count=countSql
 pagehelper.reasonable=true
 pagehelper.support-methods-arguments=true
