报修 广告 入住

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -21,6 +21,12 @@ spring.datasource.hgj.username=root
 spring.datasource.hgj.password=root
 spring.datasource.hgj.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#配置主数据库-惠管家-备用库
+#spring.datasource.hgj.jdbc-url=jdbc:mysql://192.168.5.250:3306/jiaprod?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+#spring.datasource.hgj.username=jiaprod
+#spring.datasource.hgj.password=Scw1~#gx8x
+#spring.datasource.hgj.driver-class-name=com.mysql.cj.jdbc.Driver
+
 ##配置次数据库-思源-正式
 #spring.datasource.sy.jdbc-url=jdbc:sqlserver://192.168.5.201:1433;DatabaseName=SyswinETS
 #spring.datasource.sy.username=sa
