--- a/pom.xml
+++ b/pom.xml
@@ -248,6 +248,13 @@
             <version>3.8.0</version> <!-- 请检查最新的版本号 -->
         </dependency>
 
+        <!-- 添加 opencsv 依赖 -->
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.6</version>
+        </dependency>
+
     </dependencies>
 
 
