远程文件上传

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -72,8 +72,10 @@ logging.level.root=info
 logging.level.com.jingt.helloworld.config.LogDemoConfig=warn
 logging.file.name=D:/var/log/spring-boot.log
 
-# 文件上传路径
-upload.path=D:/var/upload/file
+# 本地文件上传路径
+upload.path=D:/var/upload/test/file
+# 远程文件上传路径
+upload.path.remote=/var/upload/test/file
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
